Fix bakery name not updating. Fix afk cookies not working on ios devices

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -6,6 +6,14 @@
     user-select: none;
 }
 
+.tt {
+    position: fixed;
+    color: white;
+    background-color: black;
+    padding: 0.5rem;
+    border-radius: 5px;
+}
+
 @media only screen and (min-width: 720px) {
     .App {
         height: 100vh;
